fix up some issues with acceptance tests but still seeing issues with selenium webdriver not clearing cookies as expected